# newsletter-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.pi.yml  docker-compose.yml  main.py  pyproject.toml
PLAN/: 2026-02-27_livekit-medium-agent.md  2026-02-28_livekit-medium-agent.md  2026-03-01_docker-k8s.md  2026-03-01_frontend.md  2026-03-01_livekit-improvements.md  2026-03-01_open-source-models.md  2026-03-01_tiered-article-fetcher.md  2026-03-01_tiered-fetcher-implementation.md  2026-03-01_vector-store-indexing-control.md  2026-03-02_frontend-examples-review.md  2026-03-02_frontend-nicegui.md  2026-03-02_livekit-widget-websocket-transcript.md  2026-03-02_nicegui-example-improvements.md  2026-03-02_richer-knowledge-retrieval.md  2026-03-03_dockerise.md  2026-03-03_historical-transcripts.md  2026-03-04_k8s-hardening.md  2026-03-06_inline-newsletter-parsing.md  2026-03-06_pi-deploy-simple.md  2026-03-06_raspberry-pi-deployment.md  2026-03-06_raspberry-pi-k3s.md  2026-03-06_wake-lock.md  2026-03-07_persist-voice-chat-sessions.md
config/: newsletters.yaml  speech_replacements.yaml
docker/agent/: Dockerfile
docker/frontend/: Dockerfile
docker/pipeline/: Dockerfile
k8s/: README.md  kustomization.yaml  pvc.yaml  secret.env.template
k8s/agent/: deployment.yaml
k8s/cert-manager/: cluster-issuer.yaml
k8s/frontend/: deployment.yaml  ingress.yaml  service.yaml
k8s/pipeline/: cronjob.yaml
scripts/: bootstrap-k3s.sh  deploy-pi.sh  medium_login.py  query-data.ipynb  test_scrape_camoufox.py  test_scrape_playwright.py
services/agent/: pyproject.toml
services/agent/src/agent/: agent.py  tools.py
services/frontend/: pyproject.toml
services/frontend/src/frontend/: app.py  livekit_widget.py  page.py  routes.py
services/pipeline/: pyproject.toml
services/pipeline/src/pipeline/: __main__.py
src/: gmail_api.py  gmail_client.py  gmail_ops.py  main.py  ops_gmail.py  server.py
src/agent/: agent.py  tools.py
src/core/: config.py
src/core/gmail/: client.py  ops.py
src/frontend/: app.py  livekit_widget.py  page.py  routes.py
src/knowledge/: batch_store.py  boring_cashcow.py  cashcow_store.py  fetcher.py  medium.py  pipeline.py  raw_store.py  the_batch.py  vector_store.py
src/mcp/gmail/: server.py
tests/knowledge/: test_boring_cashcow.py  test_fetcher.py  test_medium.py  test_raw_store.py  test_the_batch.py  test_vector_store.py
