[project]
name = "mcp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "google-auth==2.47.0",
    "google-auth-oauthlib==1.2.4",
    "google-api-python-client==2.188.0",
    # Phase 1 — newsletter parsing
    "beautifulsoup4>=4.12",
    # Phase 1 — agent (mirrors livekit-project/eva/voice-agent versions)
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-deepgram~=1.0",
    "livekit-plugins-elevenlabs~=1.0",
    "livekit-plugins-anthropic~=1.0",
    # Phase 2 — knowledge pipeline
    "chromadb>=0.6",
    "camoufox>=0.4.11",
    "markdownify>=1.2.2",
    "pyyaml>=6.0.3",
    # Frontend
    "nicegui>=3.8",
]

[dependency-groups]
dev = [
    "black==23.7.0",
    "ipython>=8.0.0,<9.0.0",
    "mypy>=1.1.1,<2.0.0",
    "poethepoet>=0.29.0,<1.0.0",
    "pydantic-settings>=2.0.3,<3.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "pytest==7.4.2",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "ruff>=0.4.6,<1.0.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "types-pyyaml>=6.0.12.20250915",
]

# Poe the Poet (Scripting) #

## Agent and Scraping Pipeline

[tool.poe.tasks.agent]
cmd = "python -m src.agent.agent ${mode}"
envfile = ".env"
help = "Run the voice agent (loads .env). Modes: console (default), dev"

  [[tool.poe.tasks.agent.args]]
  name = "mode"
  default = "console"
  positional = true

[tool.poe.tasks.pipeline]
cmd = "python -m src.knowledge.pipeline"
envfile = ".env"
help = "Run the scraping pipeline once (loads .env)"

[tool.poe.tasks.frontend]
cmd = "python -m src.frontend.app"
envfile = ".env"
help = "Run the NiceGUI frontend UI (loads .env)"

## Code QA ##

[tool.poe.tasks.test]
cmd = "pytest -v"
help = "Run tests with verbose output (defaults to 'tests/' if no path given)"

[tool.poe.tasks.fmt]
cmd = "black --check src tests"
help = "Check code formatting with black (does not modify)"

[tool.poe.tasks.fmt-fix]
cmd = "black src tests"
help = "Fix code formating issues automatically with black"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Check code linting with ruff (does not modify)"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix ."
help = "Fix code linting issues automatically with ruff"

[tool.poe.tasks.fix]
sequence = ["fmt-fix", "lint-fix"]
help = "Fix all issues: formatting with black and linting with ruff"

[tool.poe.tasks.mypy]
cmd = "mypy src"
help = "Run type checking with mypy"

[tool.poe.tasks.check]
sequence = ["fmt", "lint", "mypy", "test"]
help = "Run all checks: formatting, linting, type checking, and tests"

## Dependency Configurations ##

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "I"]
lint.ignore = ["E501", "E402"]
lint.unfixable = []
line-length = 89

[tool.ruff.lint.isort]
lines-between-types = 1
