[project]
name = "newsletter-assistant"
version = "0.1.0"
description = "Personal knowledge assistant — voice agent + scraping pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "newsletter-core",
    "newsletter-knowledge",
    "newsletter-mcp",
    "newsletter-agent",
    "newsletter-frontend",
    "newsletter-pipeline",
]

[tool.uv.sources]
newsletter-core = { workspace = true }
newsletter-knowledge = { workspace = true }
newsletter-mcp = { workspace = true }
newsletter-agent = { workspace = true }
newsletter-frontend = { workspace = true }
newsletter-pipeline = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "services/*",
]

[dependency-groups]
dev = [
    "poethepoet>=0.29.0,<1.0.0",
    "black==23.7.0",
    "mypy>=1.1.1,<2.0.0",
    "pytest==7.4.2",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "ruff>=0.4.6,<1.0.0",
    "ipython",
    "jupyterlab",
    "jupyterlab-vim",
    "pandas",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "types-pyyaml>=6.0.12.20250915",
]

# Poe the Poet (Scripting) #

## Agent and Scraping Pipeline

[tool.poe.tasks.agent]
cmd = "python -m agent.agent ${mode}"
envfile = ".env"
help = "Run the voice agent (loads .env). Modes: console (default), dev"

  [[tool.poe.tasks.agent.args]]
  name = "mode"
  default = "console"
  positional = true

[tool.poe.tasks.pipeline]
cmd = "python -m knowledge.pipeline"
envfile = ".env"
help = "Run the scraping pipeline once (loads .env)"

[tool.poe.tasks.frontend]
cmd = "python -m frontend.app"
envfile = ".env"
help = "Run the NiceGUI frontend UI (loads .env)"

## Code QA ##

[tool.poe.tasks.test]
cmd = "pytest -v"
help = "Run tests with verbose output (defaults to 'tests/' if no path given)"

[tool.poe.tasks.fmt]
cmd = "black --check packages/ services/ tests"
help = "Check code formatting with black (does not modify)"

[tool.poe.tasks.fmt-fix]
cmd = "black packages/ services/ tests"
help = "Fix code formating issues automatically with black"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "Check code linting with ruff (does not modify)"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix ."
help = "Fix code linting issues automatically with ruff"

[tool.poe.tasks.fix]
sequence = ["fmt-fix", "lint-fix"]
help = "Fix all issues: formatting with black and linting with ruff"

[tool.poe.tasks.mypy]
cmd = "mypy packages/ services/"
help = "Run type checking with mypy"

[tool.poe.tasks.check]
sequence = ["fmt", "lint", "mypy", "test"]
help = "Run all checks: formatting, linting, type checking, and tests"

## Dependency Configurations ##

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "I"]
lint.ignore = ["E501", "E402"]
lint.unfixable = []
line-length = 89

[tool.ruff.lint.isort]
lines-between-types = 1
