[project]
name = "newsletter-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "newsletter-core",
    "newsletter-knowledge",
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-deepgram~=1.0",
    "livekit-plugins-elevenlabs~=1.0",
    "livekit-plugins-anthropic~=1.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.uv.sources]
newsletter-core = { workspace = true }
newsletter-knowledge = { workspace = true }
