[project]
name = "newsletter-frontend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "newsletter-core",
    "newsletter-knowledge",
    "nicegui>=3.8",
    "livekit-api",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frontend"]

[tool.uv.sources]
newsletter-core = { workspace = true }
newsletter-knowledge = { workspace = true }
